force-app/main/default/objects/Record_Create__e/Record_Create__e.object-meta.xml
<CustomObject>
    <description>The opposite of a flow cancel - can be used w/ paused flows to alert the flow that a record has been created.</description>
    <label>Record Create</label>
    <pluralLabel>Record Creates</pluralLabel>
</CustomObject>