force-app/main/default/objects/Record_Create__e/fields/IdOrExternalId1__c.field-meta.xml
<CustomField>
    <fullName>IdOrExternalId1__c</fullName>
    <label>IdOrExternalId1</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>