force-app/main/default/objects/Record_Create__e/fields/IdOrExternalId2__c.field-meta.xml
<CustomField>
    <fullName>IdOrExternalId2__c</fullName>
    <label>IdOrExternalId2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>