force-app/main/default/objects/Record_Create__e/fields/IdOrExternalId3__c.field-meta.xml
<CustomField>
    <fullName>IdOrExternalId3__c</fullName>
    <label>IdOrExternalId3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>