force-app/main/default/objects/Record_Create__e/fields/JsonValue__c.field-meta.xml
<CustomField>
    <fullName>JsonValue__c</fullName>
    <label>JsonValue</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>